fixes spacing on the right

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -8,6 +8,7 @@ footer.footer {
     width: 1100px;
     margin: 0 auto;
     padding: 20px;
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
 
