--- a/app/assets/stylesheets/components/nav_bar.scss
+++ b/app/assets/stylesheets/components/nav_bar.scss
@@ -2,12 +2,12 @@
   background-color: $white;
   border-bottom: 1px solid $lightgray;
   padding: 10px;
-  min-width: 1100px;
+  width: 1100px;
   box-sizing: border-box;
   
   main {
     margin: 0 auto;
-    width: 1100px;
+    width: 1080px;
     display: flex;
     justify-content: space-between;
     align-items: center;
